[package]
name = "observability"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "=0.8.4", features = ["tokio"] }
anyhow.workspace = true
config.workspace = true
http.workspace = true
lazy_static.workspace = true
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-http = "=0.29.0"
opentelemetry-otlp = { version = "=0.29.0", features = ["tokio", "grpc-tonic"] }
opentelemetry-prometheus = "=0.29.1"
opentelemetry-semantic-conventions = "=0.29.0"
opentelemetry-stdout = { version = "=0.29.0", features = ["trace"] }
opentelemetry_sdk = { version = "=0.29.0", features = ["rt-tokio", "logs", "metrics"] }
prometheus = { version = "=0.14.0", features = ["process"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
serde = { workspace = true, features = ["derive", "rc"] }
strum.workspace = true
strum_macros.workspace = true
sysinfo = "0.36.1"
thiserror.workspace = true
tonic.workspace = true
tracing = { workspace = true, features = ["log", "async-await"] }
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = "=0.2.3"
tracing-test = "0.2"
typed-builder = "=0.21.0"
uuid = { version = "=1.16.0", features = ["v4", "fast-rng"] }
validator.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]

[features]
default = []
