[package]
name = "observability"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# ⚠️ IMPORTANT: Add new dependencies to workspace root Cargo.toml, NOT here!
# Use .workspace = true to reference workspace dependencies
# Maintain alphabetical order
anyhow.workspace = true
axum.workspace = true
config.workspace = true
http.workspace = true
lazy_static.workspace = true
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry-http.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
prometheus.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
strum.workspace = true
strum_macros.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net"] }
tonic.workspace = true
tracing = { workspace = true, features = ["log", "async-await"] }
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-test.workspace = true
typed-builder.workspace = true
uuid.workspace = true
validator.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]

[features]
default = []
