[package]
name = "utils"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
tfhe-safe-serialize.workspace = true
tfhe-versionable.workspace = true
bc2wrap.workspace = true

[dev-dependencies]
tempfile.workspace = true
