[package]
name = "vsocktun"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-queue TUN to VSOCK relay for Nitro enclaves."
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true

[dev-dependencies]
tempfile.workspace = true
