[package]
name = "backward-compatibility-generate-v0-11-0"
version = "0.11.0"
publish = false
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
# Import the base backward-compatibility crate for shared types and utilities
backward-compatibility = { path = ".." }

# NOTE: Some dependencies below are duplicated from ../Cargo.toml
# This is intentional - these crates are excluded from the workspace for isolation.
# Each generator may need different versions to match its target KMS version.

# This is a list of kms-core versions we will generate data for. This list will grow over time.
kms_0_11_0 = { git = "https://github.com/zama-ai/kms.git", package = "kms", rev = "v0.11.0" }
kms_grpc_0_11_0 = { git = "https://github.com/zama-ai/kms.git", package = "kms-grpc", rev = "v0.11.0" }
threshold_fhe_0_11_0 = { git = "https://github.com/zama-ai/kms.git", package = "threshold-fhe", rev = "v0.11.0", features = [
    "testing",
] }

# Dependencies for the 0.11.0 version
# Note: these dependencies should match the versions used by the KMS and distributed decryption
# modules as much as possible to avoid serialization differences
tfhe_versionable_0_6 = { package = "tfhe-versionable", version = "=0.6.0" }
tfhe_1_3 = { package = "tfhe", version = "=1.3.2", features = [
    "shortint",
] }
alloy-sol-types-1_1_2 = { package = "alloy-sol-types", version = "=1.1.2" }
alloy-primitives-1_1_2 = { package = "alloy-primitives", version = "=1.1.2" }

# Common dependencies
# Note: This serde version is used for metadata types imported from backward-compatibility crate.
# The old KMS types (kms_0_11_0) will use their own serde 1.0.219 from their dependency tree.
# Both serde versions coexist in the same binary - this is intentional and correct!
serde = { version = ">=1.0.219, <=1.0.226", features = ["derive"] }
bincode = "=1.3.3"
aes-prng = "=0.2.1"
rand = "=0.8.5"
ron = { version = "=0.10.1", features = ["integer128"] }
tokio = { version = "=1.46.1", features = ["full"] }

[[bin]]
name = "backward-compatibility-generate-v0-11-0"

[patch.crates-io]
rcgen = { git = 'https://github.com/mkmks/rcgen.git', branch = 'k256' }
