[package]
name = "kms-blockchain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bip32 = "0.5.1"
cosmos-proto = { path = "../cosmos-proto" }
deep_space = "2.24.1"
ecdsa = { version = "0.16.9", features = ["alloc"] }
events = { path = "../events" }
hex = "0.4.3"
hmac = "0.12.1"
k256 = { version = "0.13.3" }
prost = { version = "0.12.4" }
prost-types = { version = "0.12.4" }
secp256k1 = "0.29.0"
serde = "1.0.198"
serde_json = "1.0.116"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
subtle-encoding = { version = "0.5.1" }
tendermint = { version = "0.37.0", features = ["secp256k1"] }
thiserror = "1.0.59"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
tonic = { version = "0.11", features = ["transport","tls","tls-roots"] }
tracing = { version = "~0.1", features = ["log"] }
typed-builder = { version = "0.18.1" }

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = { version = "~0.3.16", features = ["env-filter", "fmt"] }


[[example]]
name = "decrypt"
path = "examples/decrypt.rs"

[[example]]
name = "decrypt-response"
path = "examples/decrypt_response.rs"
