[package]
name = "kms-blockchain-client"
version = "0.8.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bip32 = "0.5.1"
cosmos-proto = { path = "../cosmos-proto" , version = "0.8.0" }
deep_space = "2.24.1"
ecdsa = { version = "0.16.9", features = ["alloc"] }
events = { path = "../events" , version = "0.8.0" }
hex = "0.4.3"
hmac = "0.12.1"
k256 = { version = "0.13.3" }
prost.workspace = true
prost-types.workspace = true
secp256k1 = "0.29.0"
serde = { workspace = true }
serde_json = "1.0.120"
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
subtle-encoding = { version = "0.5.1" }
tendermint = { version = "0.37.0", features = ["secp256k1"] }
thiserror = "1.0.59"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, features = ["transport","tls","tls-roots"] }
tracing = { workspace = true, features = ["log"] }
typed-builder = { workspace = true }

[dev-dependencies]
clap = { workspace = true }


[[example]]
name = "decrypt"
path = "examples/decrypt.rs"

[[example]]
name = "decrypt-response"
path = "examples/decrypt_response.rs"
