[package]
name = "kms-blockchain-client"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
bip32 = "=0.5.2"
cosmos-proto.workspace = true
deep_space = "=2.26.0"
ecdsa = { version = "=0.16.9", features = ["alloc"] }
events.workspace = true
hex.workspace = true
hmac = "=0.12.1"
k256.workspace = true
prost.workspace = true
prost-types.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
subtle-encoding = "=0.5.1"
tendermint = { workspace = true, features = ["secp256k1"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, features = ["transport", "tls", "tls-roots"] }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true

[dev-dependencies]
clap.workspace = true


[[example]]
name = "decrypt"
path = "examples/decrypt.rs"

[[example]]
name = "decrypt-response"
path = "examples/decrypt_response.rs"
