[package]
name = "kms-blockchain-connector"
version = "0.7.1"
edition.workspace = true
publish.workspace = true
authors.workspace = true


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
byteorder = "1.5.0"
clap = { workspace = true, features = ["derive", "env"] }
conf-trace = { path = "../../conf-trace" }
dashmap = "6"
enum_dispatch = "0.3.12"
events = { path = "../events", features = ["subscription"] , version = "0.7.1" }
hex = "0.4.3"
kms = { path = "../../core/service", default-features = false, features = ["grpc-client"] , version = "0.7.1" }
kms-blockchain-client = { path = "../client" , version = "0.7.1" }
opentelemetry = { version = "0.23", features = ["metrics"] }
reqwest = "0.12.4"
retrying = { version = "0.1.0", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { workspace = true , features = ["full"] }
tonic = { workspace = true, features = ["transport","tls","tls-roots"] }
tracing = { workspace = true, features = ["log"] }
typed-builder = { workspace = true }

[dev-dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
kms = { path = "../../core/service", features = ["testing"] , version = "0.7.1" }
rand.workspace = true
serial_test = "3.1.1"
temp-env = "0.3"
test-context = "0.3.0"
test-utilities = { path = "./utilities" }
tracing-test = "0.2.4"

[features]
slow_tests = []
