[package]
name = "kms-blockchain-connector"
version = "0.9.0-rc11"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
byteorder = "1.5.0"
clap = { workspace = true, features = ["derive", "env"] }
conf-trace = { path = "../../conf-trace" , version = "0.9.0-rc11" }
dashmap = "6"
enum_dispatch = "0.3.12"
events = { path = "../events", features = ["subscription"] , version = "0.9.0-rc11" }
hex = "0.4.3"
kms = { path = "../../core/service", default-features = false, features = ["grpc-client", "insecure"] , version = "0.9.0-rc11" }
kms-blockchain-client = { path = "../client" , version = "0.9.0-rc11" }
opentelemetry = { version = "0.23", features = ["metrics"] }
reqwest = "0.12.4"
retrying = { version = "0.1.0", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tokio = { workspace = true , features = ["full"] }
tonic = { workspace = true, features = ["transport","tls","tls-roots"] }
tracing = { workspace = true, features = ["log"] }
typed-builder = { workspace = true }
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", tag = "tfhe-rs-0.8.0" }

[dev-dependencies]
alloy-primitives = "0.8.3"
alloy-sol-types = "0.8.3"
kms = { path = "../../core/service", features = ["testing"] , version = "0.9.0-rc11" }
rand.workspace = true
serial_test = "3.1.1"
temp-env = "0.3"
test-context = "0.3.0"
test-utilities = { path = "./utilities" }
tracing-test = "0.2.4"

[features]
slow_tests = []
