[package]
name = "kms-blockchain-connector"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kms-blockchain-connector"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
byteorder = "=1.5.0"
clap = { workspace = true, features = ["derive", "env"] }
conf-trace.workspace = true
cosmos-proto.workspace = true
dashmap = "=6.1.0"
enum_dispatch = "=0.3.13"
events = { workspace = true, features = ["subscription"] }
hex.workspace = true
kms-grpc = { workspace = true, features = ["insecure", "non-wasm"] }
kms-common.workspace = true
kms-blockchain-client.workspace = true
opentelemetry = { workspace = true, features = ["metrics"] }
prost-types.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
strum = { workspace = true, features = ["derive"] }
strum_macros.workspace = true
tokio = { workspace = true , features = ["full"] }
tonic = { workspace = true, features = ["transport","tls","tls-roots"] }
tracing = { workspace = true, features = ["log"] }
typed-builder.workspace = true
tfhe.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
kms = { workspace = true, features = ["testing", "insecure", "non-wasm"] }
rand.workspace = true
rstest = "=0.23.0"
serial_test.workspace = true
temp-env = "=0.3.6"
test-context = "=0.3.0"
test-utilities = { path = "./utilities" }
test-utils = { path = "../../test-utils" }
tracing-test = "=0.2.5"

[features]
slow_tests = []
