[package]
name = "cosmos-proto"
version = "0.9.0-rc4"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
glob = "0.3.1"



