[package]
name = "cosmos-proto"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
glob = "0.3.1"

[lints.clippy]
doc_lazy_continuation = "allow"
