[package]
name = "events-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "~0.1"
events = { path = "../events" }
fast_websocket_client = "0.2.0"
serde = { version = "1.0.197", features = ["derive"] }
simdutf8 = "0.1.4"
simd-json = "0.13.9"
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "~0.1", features = ["log"] }
typed-builder = "0.18.1"

[dev-dependencies]
ws-mock = "0.0.1"
serde_json = "1.0"
test-context = "0.3.0"
tracing-subscriber = { version = "~0.3.16", features = ["env-filter", "fmt"] }


